    fixed bug causing wrong order of accidentals in some key signatures
    the "setcursor" message has a new @zeropimchord attribute for setting the playhead on chords instead of barlines at the beginning of a measure
    fixed bug causing hangs when adding voices
    new "auto" possibility for setting breakpoints via "addbreakpoint"

- bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
        Pickup measures are correctly imported
        Accidentals are correctly dealt with when importing multi-voice parts
        Fixed crash when importing empty lyrics with empty "text" tag
        Time signature can be inferred if not given
    XML import and export: three-quarters-sharp and -flat accidentals have correct name now (was "three-quarter")
        complex time signatures are correctly handled
    symduration variable now works for measures as well
    @autocomplete attribute exposed
    fixed bug potentially causing weird behaviors while setting the score from gathered syntax if the clefs introduced were less than the number of voices
    fixed bug causing crashed when addtempo was called with improper syntax
    fixed bug sometimes causing wrong placement of dynamics in bach.score at the very end of a note
    fixed bug causing possible missing initial tempo in "subscore" command
    fixed wrong filename in MIDI score import help file
    @finitestaff: new attribute to trim staff after last measure

- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        New "importsubdivisions" message attribute
        Staves are now correctly ordered by MIDI channel in format 0
    exportmidi: new "exportbarlines" message attribute
        new "exportdivisions" message attribute